@@ -1,10 +1,16 @@
-either run the sh file in resources, or the following mvn command in the terminal:
+# Aeron Mono-Repo Project
+## Overview
+This is a mono-repo project for Aeron, which includes multiple packages and modules that are:
+- aeron-common
+  - This package contains common utilities and shared code used across different Aeron modules.
+- ipc-dedicated
+  - This package provides a dedicated IPC (Inter-Process Communication) implementation for Aeron.
+  - It includes classes and methods for efficient communication between processes using Aeron.
+- ipc-shared
+  - This package provides a shared IPC implementation for Aeron.
 
-```bash
-mvn -DskipTests package && mvn exec:java -Dexec.mainClass=org.example.Main
-```
+-----------
 
-without jvm.config, the command would be
-```bash
-mvn -DskipTests package && mvn exec:java -Dexec.mainClass=org.example.Main -Dexec.vmArgs="--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-```
+## How to Run
+- Each project contains a README with a command to run the project. 
+- Alternatively, there is also a shell script in each start.sh which can be used.
